# PicoStation3D

./: .gitmodules  Readme.md
board/: fp-lib-table  picostation-cache.lib  picostation.bck  picostation.dcm  picostation.kicad_pcb  picostation.lib  picostation.net  picostation.sch  sym-lib-table
board/gerb/: picostation-B.Cu.gbr  picostation-B.Mask.gbr  picostation-B.Paste.gbr  picostation-B.SilkS.gbr  picostation-Edge.Cuts.gbr  picostation-F.Cu.gbr  picostation-F.Mask.gbr  picostation-F.Paste.gbr  picostation-F.SilkS.gbr  picostation-In1.Cu.gbr  picostation-In2.Cu.gbr  picostation.drl
board/picostation.pretty/: ER-TFT1.54-1.kicad_mod  MEM2061-MICRO-SD.kicad_mod  QFN-56_EP_7x7_Pitch0.4mm.kicad_mod  SNES-Controller-Left.kicad_mod  SNES-Controller-Right.kicad_mod  STX-3000-TRS.kicad_mod  SW_SPST_PTS815.kicad_mod  testpoint-0.5mm.kicad_mod
fpga/hdl/fpga/: picostation_fpga.f  picostation_fpga.v
fpga/synth/: .gitignore  Makefile  picostation.pcf  picostation_prepack.py
software/: CMakeLists.txt
software/apps/: CMakeLists.txt
software/apps/blinky/: CMakeLists.txt  bitstream_blinky.h  fpga_spi_config.pio  main.c
software/apps/pwm_sine_wave/: CMakeLists.txt  main.c
software/include/board/: picostation.h
